Moved styling for MainBoard class into a partial scss file. Fixed spacing between Nav and MainBoard.

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -2,6 +2,7 @@
 @import "./partials/_clearfix";
 @import "./partials/_userforms";
 @import "./partials/_card";
+@import "./partials/_board";
 @import "./partials/_newCard";
 
 body {
@@ -101,43 +102,6 @@ input[type="submit"] {
 
 	&.cardBtn, &.newCardBtn {
 		margin-top: 1rem;
-	}
-}
-
-.MainBoard {
-	display: flex;
-	flex-flow: row wrap;
-	order: 2;
-	justify-content: center;
-	margin-top: 1.5rem;
-}
-
-#Queue,
-#InProgress,
-#Done {
-	flex: 0 0 90%;
-	height: auto;
-	margin-bottom: 1rem;
-	border-radius: 0.5rem;
-	background-color: rgb(224, 224, 224);
-
-	// Flexbox on cards
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-start;
-
-	h2 {
-		flex: 0 0 auto;
-		order: 0;
-		margin-bottom: 1rem;
-		box-shadow: 0 1px 1px #ccc;
-		border-radius: 0.5rem 0.5rem 0 0;
-		padding: 1rem 0;
-		font-size: 1.25rem;
-		font-weight: bold;
-		text-align: center;
-		text-transform: uppercase;
-		background-color: rgb(255, 255, 255);
 	}
 }
 
